--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,18 @@
 .App {
   text-align: center;
+  margin-top: 1em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 30vmin;
   pointer-events: none;
+  margin-top: 1em;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -35,4 +37,69 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.colorBox {
+  display: flex;
+  justify-content: center;
+}
+
+.colorDisplay {
+  padding: 0.5em;
+  border: 3px solid black;
+  margin-bottom: 1em;
+  margin-right: 1em;
+}
+
+.colorWrapper {
+  display: flex;
+  width: 50%;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 2em;
+  padding-top: 1em;
+
+  border-top: 5px solid #8080802e;
+  border-bottom: 5px solid #8080802e;
+}
+
+button {
+  background: none;
+  border: 2px solid black;
+  margin-top: 1em;
+  padding: 0.5em;
+  width: auto;
+  background-color: white;
+  cursor: pointer;
+}
+form {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+}
+@media screen and (max-width: 768px) {
+  form {
+    width: 90%;
+  }
+  .App-logo {
+    height: 40vmin;
+  }
+  .colorWrapper {
+    width: 90%;
+  }
+}
+
+input {
+  font-size: 0.5em;
+  border: none;
+  border-bottom: 1px solid;
+  background: none;
+  padding-bottom: 0.3em;
+}
+input:focus {
+  outline: 0;
+}
+
+body {
+  background: #8080802e;
 }
