--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 }
 
 .App-logo {
-  height: 30vmin;
+  height: 20vmin;
   pointer-events: none;
   margin-top: 1em;
 }
@@ -44,30 +44,34 @@
 }
 
 .colorDisplay {
-  padding: 0.5em;
-  border: 3px solid black;
+  padding: 1em;
+  border: 5px solid black;
   margin-bottom: 1em;
   margin-right: 1em;
+  font-size: 1.3em;
+  font-weight: bold;
 }
 
 .colorWrapper {
   display: flex;
-  width: 50%;
+  width: 80%;
   flex-wrap: wrap;
   justify-content: center;
-  margin-top: 2em;
-  padding-top: 1em;
+  margin-top: 3em;
+  padding-top: 2em;
 
-  border-top: 5px solid #8080802e;
-  border-bottom: 5px solid #8080802e;
+  border-top: 10px solid #8080802e;
+  border-bottom: 10px solid #8080802e;
 }
 
 button {
   background: none;
-  border: 2px solid black;
+  border: 3px solid black;
   margin-top: 1em;
   padding: 0.5em;
   width: auto;
+  font-size: 2em;
+  font-weight: bold;
   background-color: white;
   cursor: pointer;
 }
@@ -89,7 +93,7 @@ form {
 }
 
 input {
-  font-size: 0.5em;
+  font-size: 1em;
   border: none;
   border-bottom: 1px solid;
   background: none;
